--- a/project/lesson/basic/flexbox/css/flexbox.css
+++ b/project/lesson/basic/flexbox/css/flexbox.css
@@ -12,6 +12,18 @@
     margin: 10px;
 }
 
+.item2 {
+    width: 100px;
+    background-color: cadetblue;
+    margin: 10px;
+}
+
+.item3 {
+    height: 100px;
+    background-color: cadetblue;
+    margin: 10px;
+}
+
 .column {
     flex-direction: column;
 }
@@ -23,4 +35,8 @@
 .container {
     display: flex;
     border: 1px solid black;
+}
+
+.stretch {
+    align-items: stretch;
 }
